# covenant-protocol

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_1000X.md  DEPLOYMENT_STATUS.md  DX_IMPROVEMENT_PLAN_2025.md  DX_SUMMARY.md  FRONTEND_IMPROVEMENTS.md  GAS_OPTIMIZATION_REPORT_2025.md  GAS_OPTIMIZATION_SUMMARY.md  GITNEXUS_ANALYSIS.md  IMPROVEMENT_LOG.md  MEMORY_BACKUP.md  MORNING_BRIEFING.md  Makefile  README.md  RESEARCH_REPORT.md  RESEARCH_SYNTHESIS_TOP_10.md  SECURITY_RESEARCH_2025.md  SECURITY_RESEARCH_SUMMARY.md  STATUS_NOW.md  SUBMISSION.md  TOKENOMICS_RESEARCH_2025.md  TOKENOMICS_SUMMARY.md  asset-manifest.json  foundry.toml  hardhat.config.js  index.html  package-lock.json  package.json  setup-github.sh  vercel.json
cache/: solidity-files-cache.json
compliance-research/: COMPLIANCE_QUICK_REFERENCE.md  COVENANT_COMPLIANCE_FRAMEWORK_2025.md  ComplianceRegistry.sol  VerifiedCovenantFactory.sol
docs/: 404.html  (+3 more)
services/agent-api/: .env.example  Dockerfile  README.md  pyproject.toml
services/agent-api/adapters/: __init__.py  bittensor_adapter.py  eliza_adapter.py  fetch_uagent.py  morpheus_adapter.py  olas_adapter.py
services/agent-api/app/: config.py  main.py
services/agent-api/app/api/: agents.py  coordination.py  disputes.py  execution.py  health.py  reputation.py  tasks.py
services/agent-api/app/schemas/: agent.py  coordination.py  task.py
services/agent-api/core/: blockchain.py  coordinator.py  database.py  dispute_engine.py  execution_engine.py  registry.py  tasks.py
services/agent-api/tests/: test_agents.py  test_coordination.py
(+581 files in other folders)
