[project]
name = "covenant-agent-api"
version = "1.0.0"
description = "COVENANT Protocol AI Agent Orchestrator API"
authors = [{ name = "COVENANT Protocol", email = "dev@covenant.io" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "celery>=5.3.6",
    "openai>=1.16.2",
    "anthropic>=0.21.3",
    "langchain>=0.1.14",
    "langchain-openai>=0.1.1",
    "web3>=6.16.0",
    "eth-account>=0.11.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk>=1.44.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
